Fixed title text alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -274,7 +274,7 @@
 .post-title {
   position: relative;
   font-size: 36px;
-  text-align: justify;
+  text-align: left;
 }
 
 .post-title span {
